--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class = "name">
                 <h1>Nícolas Ribeiro Lima de Souza Domiciano</h1>
                 <img src = "https://lh3.googleusercontent.com/ZxTwpkWZujNScKatB1Uyyvm_7jCyVeP-HIqs4PhlCGyBgzfoP_IGSZVhilpfpTSSq5igXHJ4BT6iqy9L7tJW1ShL1yx4T04-XsrGjkBaBmVUMpr3pEu-LlTCJVkSK2rmxRYKFlQnY-EdnDbWaiLnNZo_rcis5inaAfpzTaAiCcP5oZvBUyYF9TE2OkyMivpHmLu2t3AJhH7rxj-aSUkJy9yQy4ClJN0h_XH5giXX3lhlNf02LnUVHhvGLKr2n2VayW6PdJ8FUU9qFFam_HbJfeJYvC58c2LR5_RmX6P_ovTG_5blWZpqQDebekiUmfHpwnirVkIxrAADYg-GP-gaMed4ZpLmnHgopBtmKgx6o1gwWlZP6FbKkAAA-ox9Tf1ON9yAIyo4jBeiL9hTRaNl9K4W8SJ0Km81kLqtyv--MgT9W-qa4vj_7EA-p0fp3OVTrTkHxe8TpnsaoP9f-J7FF-Kj8SUwmdaZ9gb1hAnz8U8dX5ONukQsu9HpbrT94suy5vBBuviDeyq0BYLiO7wMhDkqoO1Ai5nvaXhyU4awubGmkeAoz-RgnRgaHaekMlUJVBOYFtuzxXvLPHUNmK7d-aVDJA9PeBzcAOigRa3IZWQb9CLtSky1ogSwC_lersfPpPMBon2-kgW_o7YEaizw26LXj71D8tyfbeUau1wCVs3ppB4KTtfOAv0oN1V89O71JmLB8vFtpWCqGoAXgySxTvbV5KcW2TxA7upjWbbcyN4fcm6RUkhtZvo=w437-h588-no" alt = "minha imagem">
-                <p>Bem-vindo ao meu portifólio! Atualmente sou estudante de Engenharia Elétrica pelo IFPB - Instituto Federal de Educação, Ciência e Tecnologia da Paraíba. Aqui você pode encontrar todas as formas de contato para falar comigo. Fique a vontade!</p>
+                <p>Bem-vindo ao meu portfólio! Atualmente sou estudante de Engenharia Elétrica pelo IFPB - Instituto Federal de Educação, Ciência e Tecnologia da Paraíba. Aqui você pode encontrar todas as formas de contato para falar comigo. Fique a vontade!</p>
             </div>
             <div class = "contato">
                 <h2>Sobre mim:</h2>                
