--- a/formulario.html
+++ b/formulario.html
@@ -70,41 +70,35 @@
 
     <hr>
 
-    <!-- Adicionando Widgets do Google Avaliações e do Whatsapp dinamico -->
+    <div id="form">
+        <h1>Favor preencher seus dados para que possamos entrar em contato!</h1>
+        <form action="obrigado.html" method="get">
+            <label>Nome</label>
+            <input type="text" title="Insira seu nome" required><br>
+            <label>Email</label>
+            <input type="email" title="Insira um email válido" required><br><br>
+            <label>Assunto</label>
+            <select name="Assunto" title="Escolha uma opção" required>
+                <option value="void" selected>Escolha uma opção</option>
+                <option value="atend">Atendimento</option>
+                <option value="vend">Vendas & Peças</option>
+                <option value="manut">Manutenção</option>
+                <option value="garant">Garantia</option>
+            </select><br><br>
+            <label>Mensagem</label>
+            <textarea title="Insira sua mensagem" required></textarea><br><br>
+            <label class="checkbox-label" for="aceito-termos">
+                <input type="checkbox" id="aceito-termos" name="aceito-termos">
+                Aceito os termos
+            </label>
+            <br><input type="submit" value="Enviar mensagem">
+        </form>
 
-    <div class="elfsight-app-8b436b89-9119-4dba-8343-2a22163854f5"></div>
+    </div>
+
+    <hr>
+
     <div class="elfsight-app-e51fb0fd-2704-40e0-b136-af281b70842b"></div>
-
-    <hr>
-
-    <div class="container" id="qmsomos">
-        
-        <h2>Quem somos?</h2>
-        <br>
-        <img src="assets/img/eu.jpg" alt="Imagem Quem Somos">
-        <p>Na imagem ao lado está Nícolas Ribeiro, responsável pela NR Tec Informática. Atualmente estudante de Sistemas
-            para Internet na UNIPÊ, ex-estudante de Engenharia Elétrica pelo IFPB e proprietário do negócio, Nícolas está no ramo de informática há quase 7 anos por
-            contato inicial com a ECS (Escola de computação solidária - projeto de extensão da presente faculdade que
-            ele estuda), foi ali onde tudo começou.<br>Teve bastante interesse em fazer acontecer,
-            buscou diversos meios de conhecimento na área de Informatica, mais precisamente na área de suporte.<br>
-            Hoje, com quase 3 anos de NR Tec Informáica, Nícolas se sente bastante feliz e determinado a dar um grande passo
-            em investimento no seu negócio que será abrir as portas para a clientela poder conhecer um espaço físico.
-            Aqui na NR, somos capacitados em te oferecer o melhor atendimento e ter a melhor solução para resolver o seu
-            problema! Dispomos do melhor custo-benefício em peças e serviços, além da realização do seu serviço em um
-            tempo eficaz.<br>
-            Abaixo você encontra a nossa localização atual que, por enquanto, funciona na residência do proprietário. </p>
-
-    </div>
-    <hr>
-    <p id="meio">Necessitando realizar algum serviço em seu computador ou notebook?</p>
-    <div id="localizacao">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.8921810751845!2d-34.91485589013757!3d-7.138465269988407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ace9a865d0e625%3A0xb2e243c82be0e414!2sNR%20Tec%20Inform%C3%A1tica!5e0!3m2!1spt-BR!2sbr!4v1683029330972!5m2!1spt-BR!2sbr"
-            width="70%" height="700" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-
-    <hr>
 
     <!-- Adicionando footer abaixo -->
 
