--- a/obrigado.html
+++ b/obrigado.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" aria-current="page" href="index.html">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#qmsomos">Quem somos</a>
+                        <a class="nav-link" href="index.html#somos">Quem somos</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button"
@@ -68,43 +68,22 @@
         </div>
     </nav>
 
-    <hr>
 
-    <!-- Adicionando Widgets do Google Avaliações e do Whatsapp dinamico -->
+    <div class="container-full text-center" id="textobg">
+        <h2>Obrigado por preencher o formulário!</h2>
+        <p class="mt-4">Agradecemos o seu contato e em breve entraremos em contato com você.</p>
+        <p>Que tal dar uma conferida em nossas redes sociais enquanto aguarda o nosso retorno?!<br>
+            <br>
+            <a target="_blank" href="https://www.instagram.com/nr.tec/" class="fab fa-instagram fa-10x me-5"></a>
+            <a target="_blank" href="https://www.tiktok.com/@nrtecmanutencoes" class="fab fa-tiktok fa-10x me-5"></a>
+            <a target="_blank" href="https://www.facebook.com/people/NR-Tec/100065210250398/"
+                class="fab fa-facebook fa-10x me-5"></a>
+        </p>
+    </div>
 
-    <div class="elfsight-app-8b436b89-9119-4dba-8343-2a22163854f5"></div>
+   
+
     <div class="elfsight-app-e51fb0fd-2704-40e0-b136-af281b70842b"></div>
-
-    <hr>
-
-    <div class="container" id="qmsomos">
-        
-        <h2>Quem somos?</h2>
-        <br>
-        <img src="assets/img/eu.jpg" alt="Imagem Quem Somos">
-        <p>Na imagem ao lado está Nícolas Ribeiro, responsável pela NR Tec Informática. Atualmente estudante de Sistemas
-            para Internet na UNIPÊ, ex-estudante de Engenharia Elétrica pelo IFPB e proprietário do negócio, Nícolas está no ramo de informática há quase 7 anos por
-            contato inicial com a ECS (Escola de computação solidária - projeto de extensão da presente faculdade que
-            ele estuda), foi ali onde tudo começou.<br>Teve bastante interesse em fazer acontecer,
-            buscou diversos meios de conhecimento na área de Informatica, mais precisamente na área de suporte.<br>
-            Hoje, com quase 3 anos de NR Tec Informáica, Nícolas se sente bastante feliz e determinado a dar um grande passo
-            em investimento no seu negócio que será abrir as portas para a clientela poder conhecer um espaço físico.
-            Aqui na NR, somos capacitados em te oferecer o melhor atendimento e ter a melhor solução para resolver o seu
-            problema! Dispomos do melhor custo-benefício em peças e serviços, além da realização do seu serviço em um
-            tempo eficaz.<br>
-            Abaixo você encontra a nossa localização atual que, por enquanto, funciona na residência do proprietário. </p>
-
-    </div>
-    <hr>
-    <p id="meio">Necessitando realizar algum serviço em seu computador ou notebook?</p>
-    <div id="localizacao">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.8921810751845!2d-34.91485589013757!3d-7.138465269988407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ace9a865d0e625%3A0xb2e243c82be0e414!2sNR%20Tec%20Inform%C3%A1tica!5e0!3m2!1spt-BR!2sbr!4v1683029330972!5m2!1spt-BR!2sbr"
-            width="70%" height="700" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-
-    <hr>
 
     <!-- Adicionando footer abaixo -->
 
@@ -121,7 +100,7 @@
                             <h4>Links:</h4>
                             <ul>
                                 <li><a href="formulario.html">Fale Conosco</a></li>
-                                <li><a href="index.html#qmsomos">Quem Somos</a></li>
+                                <li><a href="index.html#somos">Quem Somos</a></li>
                                 <li><a target="_blank" href="https://g.page/r/CRTk4CvIQ-KyEB0/review">Avalie-nos no
                                         Google!</a></li>
                             </ul>
@@ -136,8 +115,7 @@
                                         href="https://www.tiktok.com/@nrtecmanutencoes"><i
                                             class="fab fa-tiktok fa-2x"></i></a></li>
                                 <li class="list-inline-item"><a target="_blank"
-                                        href="https://www.instagram.com/nr.tec/"><i
-                                            class="fab fa-instagram fa-2x"></i></a>
+                                        href="https://www.instagram.com/nr.tec/"><i class="fab fa-instagram fa-2x"></i></a>
                                 </li>
                             </ul>
                         </div>
