Versão final do projeto APPInternet

--- a/obrigado.html
+++ b/obrigado.html
@@ -25,6 +25,8 @@
 
 <body id="corpo">
 
+    <!-- Introduzindo menu NavBar da página que será igual no form e no obrigado -->
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top" id="navbar">
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -68,6 +70,7 @@
         </div>
     </nav>
 
+    <!-- Preenchendo agradecimentos e disponibilizando redes sociais da empresa. -->
 
     <div class="container-full text-center" id="textobg">
         <h2>Obrigado por preencher o formulário!</h2>
@@ -81,7 +84,7 @@
         </p>
     </div>
 
-   
+    <!-- Integrando widget do whatsapp -->
 
     <div class="elfsight-app-e51fb0fd-2704-40e0-b136-af281b70842b"></div>
 
@@ -115,7 +118,8 @@
                                         href="https://www.tiktok.com/@nrtecmanutencoes"><i
                                             class="fab fa-tiktok fa-2x"></i></a></li>
                                 <li class="list-inline-item"><a target="_blank"
-                                        href="https://www.instagram.com/nr.tec/"><i class="fab fa-instagram fa-2x"></i></a>
+                                        href="https://www.instagram.com/nr.tec/"><i
+                                            class="fab fa-instagram fa-2x"></i></a>
                                 </li>
                             </ul>
                         </div>
