--- a/formulario.html
+++ b/formulario.html
@@ -25,6 +25,8 @@
 
 <body id="corpo">
 
+    <!-- Introduzindo menu NavBar da página que será igual no form e no obrigado -->
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top" id="navbar">
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -70,6 +72,8 @@
 
     <hr>
 
+    <!-- Conteúdo do formulário -->
+
     <div id="form">
         <h1>Favor preencher seus dados para que possamos entrar em contato!</h1>
         <form action="obrigado.html" method="get">
@@ -97,6 +101,8 @@
     </div>
 
     <hr>
+
+    <!-- Integrando widget do whatsapp -->
 
     <div class="elfsight-app-e51fb0fd-2704-40e0-b136-af281b70842b"></div>
 
