--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
 <body id="corpo">
 
+    <!-- Introduzindo menu NavBar da página que será igual no form e no obrigado -->
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top" id="navbar">
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -78,26 +80,30 @@
     <hr>
 
     <div class="container" id="qmsomos">
-        
+
         <h2>Quem somos?</h2>
         <br>
         <img src="assets/img/eu.jpg" alt="Imagem Quem Somos">
         <p>Na imagem ao lado está Nícolas Ribeiro, responsável pela NR Tec Informática. Atualmente estudante de Sistemas
-            para Internet na UNIPÊ, ex-estudante de Engenharia Elétrica pelo IFPB e proprietário do negócio, Nícolas está no ramo de informática há quase 7 anos por
+            para Internet na UNIPÊ, ex-estudante de Engenharia Elétrica pelo IFPB e proprietário do negócio, Nícolas
+            está no ramo de informática há quase 7 anos por
             contato inicial com a ECS (Escola de computação solidária - projeto de extensão da presente faculdade que
             ele estuda), foi ali onde tudo começou.<br>Teve bastante interesse em fazer acontecer,
             buscou diversos meios de conhecimento na área de Informatica, mais precisamente na área de suporte.<br>
-            Hoje, com quase 3 anos de NR Tec Informáica, Nícolas se sente bastante feliz e determinado a dar um grande passo
+            Hoje, com quase 3 anos de NR Tec Informáica, Nícolas se sente bastante feliz e determinado a dar um grande
+            passo
             em investimento no seu negócio que será abrir as portas para a clientela poder conhecer um espaço físico.
             Aqui na NR, somos capacitados em te oferecer o melhor atendimento e ter a melhor solução para resolver o seu
             problema! Dispomos do melhor custo-benefício em peças e serviços, além da realização do seu serviço em um
             tempo eficaz.<br>
-            Abaixo você encontra a nossa localização atual que, por enquanto, funciona na residência do proprietário. </p>
+            Abaixo você encontra a nossa localização atual que, por enquanto, funciona na residência do proprietário.
+        </p>
 
     </div>
     <hr>
-    <p id="meio">Necessitando realizar algum serviço em seu computador ou notebook?</p>
+
     <div id="localizacao">
+        <p id="meio">Necessitando realizar algum serviço em seu computador ou notebook?</p>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.8921810751845!2d-34.91485589013757!3d-7.138465269988407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ace9a865d0e625%3A0xb2e243c82be0e414!2sNR%20Tec%20Inform%C3%A1tica!5e0!3m2!1spt-BR!2sbr!4v1683029330972!5m2!1spt-BR!2sbr"
             width="70%" height="700" style="border:0;" allowfullscreen="" loading="lazy"
