--- a/avaliacoes.html
+++ b/avaliacoes.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nossa Localização</title>
+    <title>Nossas avaliações</title>
     <!-- Link para o CSS do Bootstrap -->
     <!-- Adicionando folhas de estilo e icone-->
     <link rel="icon" type="logo.png" href="../assets/img/logo.png" />
     <link rel="stylesheet" href="../assets/css/stylesheet.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    
+
     <!-- Adicionando integração com o widget do whatsapp-->
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
@@ -23,7 +23,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top" id="navbar">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/index.html">
                 <img src="../assets/img/logo.png" alt="NR Tec Informatica" height="70">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -34,19 +34,18 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Início</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/views/quem-somos.html">Quem somos</a>
+                        <a class="nav-link" href="/nossos-servicos.html">Nossos serviços</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/views/nossos-servicos.html">Nossos serviços</a>
+                        <a class="nav-link" href="/localizacao.html">Localização</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/views/localizacao.html">Localização</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/views/formulario.html">Fale
+                        <a class="nav-link"
+                            href="https://api.whatsapp.com/send/?phone=558398325394&text&type=phone_number&app_absent=0"
+                            target="_blank">Fale
                             Conosco</a>
                     </li>
                 </ul>
@@ -54,44 +53,17 @@
         </div>
     </nav>
 
-
     <!-- Container principal -->
-    <div class="container mt-5">
-        <!-- Título da Página -->
-        <div class="row">
-            <div class="col text-center">
-                <h1>Nossa Localização</h1>
-                <p class="lead">Encontre-nos facilmente utilizando o mapa abaixo ou obtenha direções detalhadas.</p>
-            </div>
-        </div>
 
-        <!-- Mapa de Localização -->
-        <div class="container mt-4">
-            <div class="row justify-content-center">
-                <div class="col-md-10">
-                    <div class="card border-light shadow-sm">
-                        <div class="card-body p-4">
-                            <div class="map-responsive">
-                                <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.8921810751845!2d-34.91485589013757!3d-7.138465269988407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ace9a865d0e625%3A0xb2e243c82be0e414!2sNR%20Tec%20Inform%C3%A1tica!5e0!3m2!1spt-BR!2sbr!4v1683029330972!5m2!1spt-BR!2sbr"
-                                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-                            </div>
-                            <p class="text-center mt-3 mb-0">
-                                Rua Severino Xavier da Silva, 13. Alto do Mateus, João Pessoa-PB, 58090-530 <br>
-                                Clique <a href="https://maps.app.goo.gl/ww4W7725QRdo1rqW7" target="_blank"
-                                    class="btn btn-link">aqui</a> para ver
-                                no Google Maps.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <!-- Adicionando widget do whatsapp na página -->
-    <div class="elfsight-app-e51fb0fd-2704-40e0-b136-af281b70842b"></div>
+
+
+    <hr>
+
+    <!-- Widget do google avaliações -->
+
+    
+    <div class="elfsight-app-8b436b89-9119-4dba-8343-2a22163854f5"></div>
 
     <hr>
 
@@ -107,8 +79,9 @@
                         <div>
                             <h4>Links:</h4>
                             <ul>
-                                <li><a href="formulario.html">Fale Conosco</a></li>
-                                <li><a href="index.html#qmsomos">Quem Somos</a></li>
+                                <li><a href="https://api.whatsapp.com/send/?phone=558398325394&text&type=phone_number&app_absent=0"
+                                        target="_blank">Fale Conosco</a></li>
+                                <li><a href="/quem-somos.html">Quem Somos</a></li>
                                 <li><a target="_blank" href="https://g.page/r/CRTk4CvIQ-KyEB0/review">Avalie-nos no
                                         Google!</a></li>
                             </ul>
@@ -117,14 +90,16 @@
                             <h4>Siga-nos nas redes sociais:</h4>
                             <ul class="list-inline">
                                 <li class="list-inline-item"><a target="_blank"
-                                        href="https://www.facebook.com/people/NR-Tec/100065210250398/"><i
-                                            class="fab fa-facebook fa-2x"></i></a></li>
-                                <li class="list-inline-item"><a target="_blank"
-                                        href="https://www.tiktok.com/@nrtecmanutencoes"><i
-                                            class="fab fa-tiktok fa-2x"></i></a></li>
-                                <li class="list-inline-item"><a target="_blank"
                                         href="https://www.instagram.com/nr.tec/"><i
                                             class="fab fa-instagram fa-2x"></i></a>
+                                </li>
+                                <li class="list-inline-item"><a target="_blank"
+                                        href="https://www.facebook.com/people/NR-Tec/100065210250398/"><i
+                                            class="fab fa-facebook fa-2x"></i></a>
+                                </li>
+                                <li class="list-inline-item"><a target="_blank"
+                                        href="https://www.tiktok.com/@nrtecmanutencoes"><i
+                                            class="fab fa-tiktok fa-2x"></i></a>
                                 </li>
                             </ul>
                         </div>
@@ -134,8 +109,6 @@
         </div>
     </footer>
 
+    <!-- Script do Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
-
-
-</html>
