--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
 <body id="corpo">
 
     <!-- Navbar padrão -->
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top" id="navbar">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/index.html">
                 <img src="../assets/img/logo.png" alt="NR Tec Informatica" height="70">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -40,117 +39,86 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Início</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/views/quem-somos.html">Quem somos</a>
+                        <a class="nav-link" href="/nossos-servicos.html">Nossos serviços</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/views/nossos-servicos.html">Nossos serviços</a>
+                        <a class="nav-link" href="/localizacao.html">Localização</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/views/localizacao.html">Localização</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/views/formulario.html">Fale
+                        <a class="nav-link"
+                            href="https://api.whatsapp.com/send/?phone=558398325394&text&type=phone_number&app_absent=0"
+                            target="_blank">Fale
                             Conosco</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
     <hr>
 
     <div class="container mt-5">
         <!-- Galeria de Páginas -->
         <div class="row">
-            <!-- Card para Página de Cadastro -->
-            <div class="col-md-4 mb-4">
+            <!-- Card para Área do Cliente -->
+            <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Cadastro">
+                    <img src="assets/img/cliente.png" class="card-img-top-index" alt="Área do Cliente">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Área do Cliente</h5>
+                        <p class="card-text">
+                            Acesse a área exclusiva para conferir informações e acompanhe o status do seu serviço.
+                        </p>
+                        <a href="https://sistema.nrtecinformatica.com.br/index.php/mine" class="btn btn-primary">Acessar
+                            Área do Cliente</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Card para Página de Cadastro -->
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img src="assets/img/Cadastro.png" class="card-img-top-index" alt="Cadastro" >
                     <div class="card-body text-center">
                         <h5 class="card-title">Cadastro</h5>
                         <p class="card-text">
-                            Preencha o formulário para se cadastrar e aproveitar nossos serviços.
+                            Preencha o formulário para se cadastrar no nosso sistema e aproveitar os nossos serviços. 😀
                         </p>
-                        <a href="/views/formulario.html" class="btn btn-primary">Acessar Cadastro</a>
+                        <a href="https://sistema.nrtecinformatica.com.br/index.php/mine/cadastrar"
+                            class="btn btn-primary">Acessar Cadastro</a>
                     </div>
                 </div>
             </div>
-
-            <!-- Card para Página de Localização -->
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Localização">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Localização</h5>
-                        <p class="card-text">
-                            Encontre nosso endereço físico e veja como chegar até nós.
-                        </p>
-                        <a href="/views/localizacao.html" class="btn btn-primary">Ver Localização</a>
-                    </div>
-                </div>
-            </div>
-
             <!-- Card para Página Nossos Serviços -->
-            <div class="col-md-4 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Nossos Serviços">
+                    <img src="assets/img/serviços.png" class="card-img-top-index" alt="Nossos Serviços">
                     <div class="card-body text-center">
                         <h5 class="card-title">Nossos Serviços</h5>
                         <p class="card-text">
                             Descubra a gama completa de serviços que oferecemos para atender às suas necessidades.
                         </p>
-                        <a href="/views/nossos-servicos.html" class="btn btn-primary">Saiba Mais</a>
+                        <a href="/nossos-servicos.html" class="btn btn-primary">Saiba Mais</a>
                     </div>
                 </div>
             </div>
-
-            <!-- Card para Página Quem Somos -->
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Quem Somos">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Quem Somos</h5>
-                        <p class="card-text">
-                            Conheça a equipe e a história por trás de nossa empresa.
-                        </p>
-                        <a href="/views/quem-somos.html" class="btn btn-primary">Conheça-nos</a>
-                    </div>
-                </div>
-            </div>
-
             <!-- Card para Página Avaliações -->
-            <div class="col-md-4 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Avaliações">
+                    <img src="assets/img/avaliacao.png" class="card-img-top-index" alt="Avaliações">
                     <div class="card-body text-center">
                         <h5 class="card-title">Avaliações</h5>
                         <p class="card-text">
                             Veja o que nossos clientes dizem sobre nós e nossas avaliações no Google.
                         </p>
-                        <a href="/views/avaliacoes.html" class="btn btn-primary">Ver Avaliações</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Card para Área do Cliente -->
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Área do Cliente">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Área do Cliente</h5>
-                        <p class="card-text">
-                            Acesse sua área exclusiva para gerenciar suas informações e acompanhar seu status.
-                        </p>
-                        <a href="/views/area-do-cliente.html" class="btn btn-primary">Acessar Área do Cliente</a>
+                        <a href="/avaliacoes.html" class="btn btn-primary">Ver Avaliações</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- <div class="elfsight-app-8b436b89-9119-4dba-8343-2a22163854f5"></div> -->
     <div class="elfsight-app-e51fb0fd-2704-40e0-b136-af281b70842b"></div>
 
     <hr>
@@ -169,8 +137,8 @@
                         <div>
                             <h4>Links:</h4>
                             <ul>
-                                <li><a href="/views/formulario.html">Fale Conosco</a></li>
-                                <li><a href="/views/quem-somos.html">Quem Somos</a></li>
+                                <li><a href="https://api.whatsapp.com/send/?phone=558398325394&text&type=phone_number&app_absent=0"
+                                        target="_blank">Fale Conosco</a></li>
                                 <li><a target="_blank" href="https://g.page/r/CRTk4CvIQ-KyEB0/review">Avalie-nos no
                                         Google!</a></li>
                             </ul>
