--- a/localizacao.html
+++ b/localizacao.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário</title>
+    <title>Nossa Localização</title>
     <!-- Link para o CSS do Bootstrap -->
     <!-- Adicionando folhas de estilo e icone-->
     <link rel="icon" type="logo.png" href="../assets/img/logo.png" />
@@ -23,7 +23,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top" id="navbar">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/index.html">
                 <img src="../assets/img/logo.png" alt="NR Tec Informatica" height="70">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -37,59 +37,60 @@
                         <a class="nav-link" aria-current="page" href="../index.html">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/views/quem-somos.html">Quem somos</a>
+                        <a class="nav-link" href="/nossos-servicos.html">Nossos serviços</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/views/nossos-servicos.html">Nossos serviços</a>
+                        <a class="nav-link" href="/localizacao.html">Localização</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/views/localizacao.html">Localização</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/views/formulario.html">Fale
+                        <a class="nav-link" href="https://api.whatsapp.com/send/?phone=558398325394&text&type=phone_number&app_absent=0" target="_blank">Fale
                             Conosco</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <hr>
 
-    <!-- Conteúdo do formulário -->
 
-    <div id="form">
-        <h1>Favor preencher seus dados para que possamos entrar em contato!</h1>
-        <form action="views/obrigado.html" method="get">
-            <label>Nome</label>
-            <input type="text" title="Insira seu nome" required><br>
-            <label>Email</label>
-            <input type="email" title="Insira um email válido" required><br><br>
-            <label>Assunto</label>
-            <select name="Assunto" title="Escolha uma opção" required>
-                <option value="void" selected>Escolha uma opção</option>
-                <option value="atend">Atendimento</option>
-                <option value="vend">Vendas & Peças</option>
-                <option value="manut">Manutenção</option>
-                <option value="garant">Garantia</option>
-            </select><br><br>
-            <label>Mensagem</label>
-            <textarea title="Insira sua mensagem" required></textarea><br><br>
-            <label class="checkbox-label" for="aceito-termos">
-                <input type="checkbox" id="aceito-termos" name="aceito-termos">
-                Aceito os termos
-            </label>
-            <br><input type="submit" value="Enviar mensagem">
-        </form>
+    <!-- Container principal -->
+    <div class="container mt-5">
+        <!-- Título da Página -->
+        <div class="row">
+            <div class="col text-center">
+                <h1>Nossa Localização</h1>
+                <p class="lead">Encontre-nos facilmente utilizando o mapa abaixo ou obtenha direções detalhadas.</p>
+            </div>
+        </div>
 
+        <!-- Mapa de Localização -->
+        <div class="container mt-4">
+            <div class="row justify-content-center">
+                <div class="col-md-10">
+                    <div class="card border-light shadow-sm">
+                        <div class="card-body p-4">
+                            <div class="map-responsive">
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.8921810751845!2d-34.91485589013757!3d-7.138465269988407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ace9a865d0e625%3A0xb2e243c82be0e414!2sNR%20Tec%20Inform%C3%A1tica!5e0!3m2!1spt-BR!2sbr!4v1683029330972!5m2!1spt-BR!2sbr"
+                                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
+                            <p class="text-center mt-3 mb-0">
+                                Rua Severino Xavier da Silva, 13. Alto do Mateus, João Pessoa-PB, 58090-530 <br>
+                                Clique <a href="https://maps.app.goo.gl/ww4W7725QRdo1rqW7" target="_blank"
+                                    class="btn btn-link">aqui</a> para ver
+                                no Google Maps.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <hr>
-
-    <!-- Integrando widget do whatsapp -->
-
+    <!-- Adicionando widget do whatsapp na página -->
     <div class="elfsight-app-e51fb0fd-2704-40e0-b136-af281b70842b"></div>
 
-    <!-- Adicionando footer abaixo -->
+    <hr>
 
     <footer id="rodape">
         <div class="container">
@@ -103,8 +104,7 @@
                         <div>
                             <h4>Links:</h4>
                             <ul>
-                                <li><a href="/views/formulario.html">Fale Conosco</a></li>
-                                <li><a href="/views/quem-somos.html">Quem Somos</a></li>
+                                <li><a href="https://api.whatsapp.com/send/?phone=558398325394&text&type=phone_number&app_absent=0" target="_blank">Fale Conosco</a></li>
                                 <li><a target="_blank" href="https://g.page/r/CRTk4CvIQ-KyEB0/review">Avalie-nos no
                                         Google!</a></li>
                             </ul>
@@ -113,16 +113,14 @@
                             <h4>Siga-nos nas redes sociais:</h4>
                             <ul class="list-inline">
                                 <li class="list-inline-item"><a target="_blank"
-                                        href="https://www.instagram.com/nr.tec/"><i
-                                            class="fab fa-instagram fa-2x"></i></a>
-                                </li>
-                                <li class="list-inline-item"><a target="_blank"
                                         href="https://www.facebook.com/people/NR-Tec/100065210250398/"><i
-                                            class="fab fa-facebook fa-2x"></i></a>
-                                </li>
+                                            class="fab fa-facebook fa-2x"></i></a></li>
                                 <li class="list-inline-item"><a target="_blank"
                                         href="https://www.tiktok.com/@nrtecmanutencoes"><i
-                                            class="fab fa-tiktok fa-2x"></i></a>
+                                            class="fab fa-tiktok fa-2x"></i></a></li>
+                                <li class="list-inline-item"><a target="_blank"
+                                        href="https://www.instagram.com/nr.tec/"><i
+                                            class="fab fa-instagram fa-2x"></i></a>
                                 </li>
                             </ul>
                         </div>
@@ -131,7 +129,9 @@
             </div>
         </div>
     </footer>
-    
+
 </body>
+
+
 
 </html>
