--- a/nossos-servicos.html
+++ b/nossos-servicos.html
@@ -37,16 +37,13 @@
                         <a class="nav-link" aria-current="page" href="../index.html">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/views/quem-somos.html">Quem somos</a>
+                        <a class="nav-link" href="/nossos-servicos.html">Nossos serviços</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/views/nossos-servicos.html">Nossos serviços</a>
+                        <a class="nav-link" href="/localizacao.html">Localização</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/views/localizacao.html">Localização</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/views/formulario.html">Fale
+                        <a class="nav-link" href="https://api.whatsapp.com/send/?phone=558398325394&text&type=phone_number&app_absent=0" target="_blank">Fale
                             Conosco</a>
                     </li>
                 </ul>
@@ -176,8 +173,7 @@
                         <div>
                             <h4>Links:</h4>
                             <ul>
-                                <li><a href="/views/formulario.html">Fale Conosco</a></li>
-                                <li><a href="/views/quem-somos.html">Quem Somos</a></li>
+                                <li><a href="https://api.whatsapp.com/send/?phone=558398325394&text&type=phone_number&app_absent=0" target="_blank">Fale Conosco</a></li>
                                 <li><a target="_blank" href="https://g.page/r/CRTk4CvIQ-KyEB0/review">Avalie-nos no
                                         Google!</a></li>
                             </ul>
