Correção img quebrada

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <!-- Card para Página de Cadastro -->
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <img src="assets/img/Cadastro.png" class="card-img-top-index" alt="Cadastro" >
+                    <img src="assets/img/cadastro.png" class="card-img-top-index" alt="Cadastro" >
                     <div class="card-body text-center">
                         <h5 class="card-title">Cadastro</h5>
                         <p class="card-text">
@@ -93,7 +93,7 @@
             <!-- Card para Página Nossos Serviços -->
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <img src="assets/img/serviços.png" class="card-img-top-index" alt="Nossos Serviços">
+                    <img src="assets/img/servicos.png" class="card-img-top-index" alt="Nossos Serviços">
                     <div class="card-body text-center">
                         <h5 class="card-title">Nossos Serviços</h5>
                         <p class="card-text">
