Alterações importantes descritas no assets

--- a/avaliacoes.html
+++ b/avaliacoes.html
@@ -61,9 +61,9 @@
     <hr>
 
     <!-- Widget do google avaliações -->
-
-    
     <div class="elfsight-app-8b436b89-9119-4dba-8343-2a22163854f5"></div>
+    <!-- Adicionando widget do whatsapp na página -->
+    <div class="elfsight-app-e51fb0fd-2704-40e0-b136-af281b70842b"></div>
 
     <hr>
 
